tests/baselines/reference/stringPropertyAccessWithError.errors.txt
==== tests/cases/compiler/stringPropertyAccessWithError.ts (2 errors) ====
    var x = '';
    var d = x['charAt']('invalid'); // error
            ~~~~~~~~~~~
!!! stringPropertyAccessWithError.ts(2,9): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'number' to argument 1 which is of type 'string'.
            ~~~~~~~~~~~
!!! stringPropertyAccessWithError.ts(2,9): error TS2087: Could not select overload for 'call' expression.